--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
   
 }
 
+body {
+  /* background: linear-gradient(to right, #9da9b9 43%, #ffffff 100%);
+   */
+   background: linear-gradient(to right, #b9b79d 43%, #ffffff 100%);
+}
+
