--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
   overflow-y: hidden;
+  background-color: rgb(73, 73, 73);
 }
 
 
@@ -7,9 +8,10 @@ body {
   /* background: linear-gradient(to right, #9da9b9 43%, #ffffff 100%);
    */
    /* background: linear-gradient(to right, #b9b79d 43%, #ffffff 100%); */
+   
    font-family: 'Open Sans', sans-serif;
    font-size: large;
-   color: #252422;
+   color: rgb(73, 73, 73);
    overflow-x: scroll;
    overflow-y: hidden;
    margin: 0;
@@ -23,4 +25,9 @@ body {
   padding-bottom: 5rem;
   margin: .5rem;
   overflow-x: scroll;
+}
+
+h2{
+  color: white;
+  padding: 0 1.5rem;
 }
