Can delete locally but not from database

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -38,9 +38,20 @@ $light: #eee;
   background-color: $light;
   margin: 1rem 0;
   border-radius: .5rem;
+  display: flex;
+  justify-content: space-between;
 
   &__text {
     padding: .2rem .5rem;
+  }
+
+  &__icon {
+    color: rgb(248, 147, 80);
+
+    &:hover{
+      cursor: pointer;
+      color: rgb(243, 8, 8);
+    }
   }
 }
 
