--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,13 +3,72 @@ $medium: #f6cdad;
 $light: #f5f3e4;
 $white: rgb(238, 238, 228);
 
+$breakpoint-tablet: 768px;
+$mediaMaxWidth: 1260px;
+$mediaBp1Width: 960px;
+$mediaMinWidth: 480px;
+
 
 .myNavBar {
   background-color: #F3B391 !important;
 
   &__inner{
-    background: $dark !important;
-    width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    width: 30vw;
+    position: relative;
+    flex-wrap: wrap;
+
   }
+}
+
+.navbarItem {
+  background-color: rgb(184, 183, 183) !important;
+  width: 100%;
+  margin: .5rem;
+
+  &:hover{
+    background-color: rgba(124, 235, 243, 0.5) !important;
+  }
+
+  &__media {
+    // width: 100%;
+  }
+
+  &__content {
+    height: 10vh;
+    width: 30vw;
+  }
+}
+
+
+@media (min-width: $mediaMinWidth){
+
+  
+.myNavBar {
+
+  &__inner{
+    flex-wrap: wrap;
+
+  }
+}
+
+.navbarItem {
+  background-color: rgb(184, 183, 183) !important;
+  width: 45%;
+  margin: .5rem;
+
+  &:hover{
+    background-color: rgba(124, 235, 243, 0.5) !important;
+  }
+
+  &__media {
+    // width: 100%;
+  }
+
+  &__content {
+    height: 10vh;
+    // max-width: 30vw;
+  }
+}
 }
