--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 html {
   overflow-y: hidden;
-  /* background-image: url('./assets/bgImages/OrangePlant.jpeg'); */
+  overflow-x: hidden;
   background-repeat: no-repeat; 
   background-size:100% 100%;
 }
 
 .app {
-  /* background-image: url('./assets/bgImages/OrangePlant.jpeg'); */
   background-repeat: no-repeat;
   background-size:100% 100%;
 }
@@ -16,6 +15,8 @@ body {
   /* background: linear-gradient(to right, #9da9b9 43%, #ffffff 100%);
    */
    /* background: linear-gradient(to right, #b9b79d 43%, #ffffff 100%); */
+   width: 100%;
+   height: 100%;
    
    font-family: 'Open Sans', sans-serif;
    font-size: large;
