--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -10,7 +10,7 @@ $mediaMinWidth: 480px;
 
 
 .myNavBar {
-  background-color: #F3B391 !important;
+  background-color: rgba(165, 165, 165, 0.2) !important;
 
   &__inner{
     display: flex;
