--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 html {
   overflow-y: hidden;
-  overflow-x: hidden;
+  /* overflow-x: scroll;  */
+  height: 100vh;
   background-repeat: no-repeat; 
   background-size:100% 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .app {
@@ -19,10 +22,9 @@ body {
    height: 100%;
    
    font-family: 'Open Sans', sans-serif;
-   font-size: large;
    /* color: rgb(73, 73, 73); */
-   overflow-x: scroll;
-   overflow-y: hidden;
+   /* overflow-x: hidden;
+   overflow-y: hidden; */
    margin: 0;
    padding: 0;
  
@@ -33,10 +35,11 @@ body {
 .myContainer {
   display: flex;
   padding: .5rem;
-  padding-bottom: 5rem;
+  height: 90vh;
+  /* padding-bottom: 5rem; */
   margin: .5rem;
   overflow-x: scroll;
-  /* opacity: 0; */
+  flex-grow: 0;
 }
 
 h2{
