--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -12,7 +12,7 @@ $mediaMinWidth: 480px;
 
   &__btn {
     background: rgb(177, 228, 95) !important;
-    margin: 1rem 0;
+    // margin: 1rem 0;
   }
 }
 
